<resources>
    <string name="app_name">SMP</string>
    <string name="aca">ACADEMICS</string>
    <string name="hos">HOSTEL</string>
    <string name="med">MEDICAL EMERGENCY</string>
    <string name="club_info">CLUB INFO</string>
    <string name="misc">U MUST KNOW!!!</string>
    <string name="misc_info_head">
        <b>**  For the contact numbers of all people in NITR you may need, please click on the button below</b>
    </string>
    <string name="misc_info">
        <b>Q1. Which is the nearest bank in campus?</b> \n
        Ans: State Bank of India, NIT Rourkela branch, which is located on the  First Street following the North Block Guest House.
        For directions, check Map section in your app. You can contact them on0661 2470713.
        \n \n <b>Q2. Where is the nearest post office?</b> \n
        Ans: NIT has its own post office near the Durga Pandal inside the campus. For directions, refer to Map section.
        You can contact  them on 0661 2600698.
        \n \n <b>Q3. Where is physics lab?</b> \n
        Ans: Physics lab for first years is held on the first floor of the main building. You can go there by the Metallurgy department entrance.
        Take the stairs on the left side after you enter the department and once you get to the first floor, search for the lab which is labelled as "PHYSICS LAB" on the nameplate on the door.
        \n \n <b>Q4. Where is chemistry lab?</b> \n
         Ans: Chemistry lab for first years is held on the second floor of the main building. You can go there by the Metallurgy department entrance.
        Take the stairs on the left side after you enter the department and once you get to the second floor, search for the lab which is labelled as "CHEMISTRY LAB" on the nameplate on the door.
        \n \n <b>Q5. Where will the classes be held?</b> \n
        Ans: The regular theory classes are held in the Lecture Avenue, which is located on the bylane which is opposite to Ceramic department.
        The physics and chemistry laboratories are conducted in the locations as given above. The computing laboratory is held in the Computing Lab-1 or 2 in the lecture avenue.
        \n \n <b>Q6. Where and when are physical education classes held?</b>  \n
        Ans: Physical education classes are held once a week in the Dilip Tirkey Stadium, which is located near Hexagon Restaurant.
        Students are informed about their schedule via webmail.
        \n \n <b>Q7. Are there any room to room laundry services available?</b> \n
        Ans: Yes, there are for Boys Hostels. The laundry boys come for room to room cloth collection for laundry in all halls. In girls hostels the helpers take a reasonable amount of Rs 50 per bucket for laundry. Students can also directly go to the laundry shop near Homi Bhabha Hall of Residence for the same.
        \n \n <b>Q8. Is there cycle repair shop inside the campus?</b>
        Ans: Yes, there are 2 cycle repair shops near Homi Bhabha Hall of Residence. For more details, contact 7077373946.
        \n \n <b>Q9. I am sick cannot attend classes. How to get leave?</b>
        Ans: Go to the NITR health center located opposite to REC school. The locations can be found using the map section of the app. Approach the doctor there in the given visiting hours (10:30AM-12PM and 4:30PM-7PM) from Monday to Fridayand consult him for the same. If the doctor finds the reason for leave genuine he/she will update your leave for that day and it would be duly approved in your NITRIS portal.
        In case of any health problems or sickness one can always reach the Apollo Pharmacy to get medicines.\n \n
    </string>
    <string name="acad">ACADEMICS</string>
    <string name="acad_info_head">
        <b>Q1. What is the list of books I should follow in my first year(Semseter 1 and 2)?</b> \n
        Ans: For the booklist for first year, please click on this button below.
    </string>
    <string name="acad_info">
        \n
        <b>Q2. In case of Academic purposes?</b> \n
        Ans: For the important contact numbers of administrative in charges(like Registrar, Director etc), please check the miscellaneous page of the app.
        \n \n <b>Q3. What are the maximum number of absents I can have in a semester in each subject?</b> \n
        Ans: Please check the corresponding pdf/circular as per your branch(B.Tech or M.Tech or Dual Degree or Int. Msc. etc) in the following urlhttp://www.nitrkl.ac.in/Academics/AcademicProcess/AcademicRegulations.aspx#
        \n \n <b>Q4. How to issue a book from library and when and where and whom to return it?</b> \n
        Ans: One can search for the required book in the INFORMATION KIOSK present inside the library premises. After searching for it one can know the place where the book is present through the information kiosk and then search the book there. After getting the book in order to issue it put your ID Card above the ISSUE/RETURN Machine followed by the book and then press "issue" button on the screen that comes.
        \n \nFor any help consult the librarians present inside the premises and near the office. Then the machine would produce an issue slip on "success" which is to be shown to the security guard present outside the library and then he would provide the return date at which the book is to returned.
        \n \nTo return the same put your ID Card again on the ISSUE/RETURN machine followed by your book to be returned and then press "Return" button on the screen that comes. On "success" a return slip would be generated which can be kept for any future references or discarded as per wish.
        \n \nAgain one has to then keep the returned book on the shelf present beside the ISSUE/RETURN machine. As per the current norm the maximum limit for book issue is 4 books at a time and the fine for return of book for each day after the return date is Re1 per due-book. This information might vary as per the library rules.
        \n \n <b>Q5. What is the policy of Book Exhibition how to avail books at institute book exhibitions?</b> \n
        Ans: For details please refer to this urlhttp://www.nitrkl.ac.in/docs/AcademicRegulation/08032017102929726.pdf
        \n \n <b>Q6. What is webmail?</b> \n
        Ans: It is a intra campus mailing server powered by "Zimbra" for passage of any important information between students or teachers and students or the administrative body of NIT Roukela. For the freshers who have just registered for their webmail account in the computer centre. Their default username is their institute ROLL NO. and password is the one they are asked to give at the time of registration for the same.
        \n \nOne can change password later by using the change password option in the webmail. On each day a student can send a maximum of 10 mails using this mail service exceeding which it would be marked as spam and his/her account would be blocked.
        \n \nFor unblocking the same the concerned student has to visit the computer centre (preferably in Lecture Avenue(LA) or any other computer centre within campus(the one inside Metallury and Materials Engineering department for instance)) and mention about the same and get it unblocked for further using it.
        \n \n <b>Q7. What is nitris></b> \n
        Ans: Students can view their attendance, registration, examination and hostel details in the url https://eapplication.nitrkl.ac.in/nitris/Login.aspx
        Their default username is their nitrkl roll no. and password is their webmail password. They can change the password later using change password option which comes after they log into their account.
        This page also shows the weather conditions in Rourkela and has a calender and upcoming holiday details.
        \n \n <b>Q8. Is there any kind of rule book for academic and disciplinary rules, if so how to access it?</b> \n
        Ans: One can visit the given urlhttp://www.nitrkl.ac.in/Academics/AcademicProcess/AcademicRegulations.aspx for the same.
        \n \n <b>Q9. I still have some doubts which are still unanswered here?</b> \n
        Ans: You may contact us by visiting the about us page and getting our numbers there. If you have trouble accessing that page you can call us directly using the numbers given 7978020067, 8093271771.\n \n
        \n \n
    </string>
    <string name="hostel">HOSTEL DETAILS</string>
    <string name="hostel_info_head">
        <b>Q1. I have problem with room, maintenance, mess food, have complaints, whom to contact?</b> \n
        Ans: Given below is the list of all people you need to know for the same. Kindly press the button below for the same.
    </string>
    <string name="hostel_info">
        \n
        <b>Q2. What is the work of hall secretaries(mess secretary, maintenance secretary etc) and how they are selected and what if they dont turn up to their promises?</b> \n
        Ans: Hall secreatries have the responsibility of maintaining decorum and harmony among the hall boarders inside the hall premises. They act as link between the warden, chief warden and the students and manage the hall affais and facilities to ensure a smooth stay of the boarders.
        \n \nAs the names suggest the mess secretary decides the Mess Menu as per everones needs, environment secretary is concerned with the cleanliness issues in the hall, sports secretary takes care of the sports activities in the hall or among the halls(including intra and inter hall competitions) and keep track of all sports equipments of the hall, the general secretary manages all the hall activities(like Hall Day, garden fest) and supervises the work of other secretaries, cultural secretary works towards promoting cultural events in hall or among halls through competitions like Rangoli, face painting, T-shirt designing etc.
        \n \nAll the secretaries are selected based on hall election results date and time of which are suitably notified to boarders/students through webmail and announcement. In case any of the post holders doesnot turn up to his/her duties well or students have any complaints against him/her they can submit a complaint letter in the warden office in suitable hours specifying the reason for the same.
        \n \n <b>Q3. What is the procedure to change the room after first year?</b> \n
        Ans: Generally students are alloted double seated rooms after their first year i.e. during their 3rd semester. So students desiring to get a specific room in a specific hostel/hall of residence need to form a group of their group of 2 or 3 or more(depending on number of students in their friend circle wanting to get room in same block or nearby or in same hall) and suitably send a letter (specifying their names and roll no. along with the details of the hall and room they want) to the Chief Warden and submit it in his office in working hours. If a student doesnot have a group or doesnot send any letter to the Chief Warden office for the same then he/she would be randomly alloted a hall and room based on availability and NITR Room Alottment Policy.
        \n \n
    </string>
</resources>