<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/misc"
        android:id="@+id/main_text"
        android:nestedScrollingEnabled="false"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:layout_below="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        android:allowUndo="false"
        android:textColor="#0000ff"
        android:focusable="false"
        android:focusableInTouchMode="false" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misc_info_head"
        android:id="@+id/head"
        android:nestedScrollingEnabled="false"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:textIsSelectable="true"
        android:layout_below="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        android:allowUndo="false" />

    <Button
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Important Contact Numbers" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="95">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:text="@string/misc_info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
