<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Features"
    android:weightSum="1"
    android:orientation="vertical"
  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

       >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/pd3"
            android:layout_above="@+id/acad"
            android:layout_alignLeft="@+id/acad"
            android:layout_alignStart="@+id/acad"
            android:layout_alignRight="@+id/acad"
            android:layout_alignEnd="@+id/acad"
            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/pd4"
            android:layout_above="@+id/medical"
            android:layout_alignRight="@+id/acad"
            android:layout_alignEnd="@+id/acad" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >
        <Button
            android:id="@+id/acad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aca"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_alignBaseline="@+id/hos"
            android:layout_alignBottom="@+id/hos"
            android:layout_alignLeft="@+id/medical"
            android:layout_alignStart="@+id/medical" />

        <Button
            android:id="@+id/medical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/med"
            android:layout_alignBaseline="@+id/misc"
            android:layout_alignBottom="@+id/misc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/pd6"
            android:layout_alignTop="@+id/imageView"
            android:layout_alignRight="@+id/hos"
            android:layout_alignEnd="@+id/hos"
            />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/pd7"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_above="@+id/aboutUs"
            android:layout_toRightOf="@+id/medical"
            android:layout_toEndOf="@+id/medical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <Button
            android:id="@+id/hos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hos"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_above="@+id/imageView6"
            android:layout_toRightOf="@+id/aboutUs"
            android:layout_toEndOf="@+id/aboutUs"
            android:layout_marginBottom="15dp" />



        <Button
            android:id="@+id/misc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misc"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="146dp" />

    </LinearLayout>



    <Button
        android:id="@+id/aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ABOUT US"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/medical"
        android:layout_toRightOf="@+id/acad"
        android:layout_toEndOf="@+id/acad" />






</LinearLayout>